# eden-logger

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
crates/eden_logger/: Cargo.toml  FEATURES.md  README.md
crates/eden_logger/benches/: REPORT.md  display_format.rs  eden_logger.rs  logging_comparison.rs
crates/eden_logger/examples/: log_contention.rs  logging_example.rs  profile_hotpath.rs
crates/eden_logger/src/: context.rs  fields.rs  filter.rs  lib.rs  metrics.rs  schema.rs  sink.rs  trace.rs  writer.rs
crates/eden_logger_macros/: Cargo.toml
crates/eden_logger_macros/src/: lib.rs
