[workspace]
members = [
    "crates/eden_logger",
    "crates/eden_logger_macros",
]
resolver = "2"

[workspace.dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
criterion = { version = "0.5.1", features = [
    "async",
    "async_tokio",
    "html_reports",
    "tokio",
] }
env_logger = "0.10.2"
function_name = "0.3.0"
itoa = "1.0.15"
log = "0.4.28"
opentelemetry = "0.30.0"
proc-macro2 = "1.0.103"
quote = "1.0.42"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
smol_str = { version = "0.3.4", features = ["serde"] }
syn = { version = "2.0.111", features = ["extra-traits", "full", "parsing"] }
ufmt = "0.2"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ["cfg(embedded_db)"]

[workspace.lints.clippy]
unwrap_used = "deny"
